--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </main>
 
     <footer class="text-center py-10 opacity-50 text-sm">
-        Made with ❤️ for the world's best girl.
+        Made by Ahad with ❤️ for the world's best girl.
     </footer>
 
     <script>
