--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
 
         <footer class="mt-12 text-purple-400/40 text-sm tracking-widest uppercase">
-            Captured in our shared universe
+            Captured in our shared universe  Alishba ❤️ Ahad
         </footer>
     </main>
 
