--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                      x-cloak 
                      class="mt-8 p-6 rounded-2xl bg-white/5 border border-purple-500/20 text-left">
                     <p class="text-purple-100 leading-relaxed italic">
-                        "Every second since we met has been a blessing. I built this counter to track the time we've spent building our world together. Even as the numbers grow, my love for you grows faster. And Btw the time counter is legit took me alot time to get the exact number i love yaa. Sleep well, my queen."
+                        "Every second since we met has been a blessing. I built this counter to track the time we've spent building our world together. Even as the numbers grow, my love for you grows faster. And Btw the time counter is very accurate legit took me alot time to get the exact number i love yaa. Sleep well, my queen."
                     </p>
                     <div class="mt-4 flex items-center gap-2 text-rose-400 cursive text-xl">
                         — Forever Yours Ahad ❤️
